# hosts2blackhole

./: pyproject.toml  requirements.txt
src/hosts2blackhole/: __init__.py  __main__.py
test/hosts2blackhole-0.0.1/: PKG-INFO  README.md  pyproject.toml
