[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hosts2blackhole"
version = "0.0.1"
dependencies = [
  "requests",
  'importlib-metadata; python_version<"3.10"',
]
# requires_python = ">= 3.9   "
# install_requires=['hosts2blackhole']

[project.scripts]
hosts2blackhole = "hosts2blackhole:cli"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default